@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-05T00:47:10Z",
+  "timestamp" : "2023-11-05T08:11:19Z",
   "count_outdated" : 1432,
   "uniques_outdated" : 777,
-  "count" : 1465,
-  "uniques" : 795,
+  "count" : 1466,
+  "uniques" : 796,
   "clones" : [
     {
       "timestamp": "2023-10-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
