@@ -1,3 +1,12 @@
+2023-11-05T08:11:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6760111085 # 2055
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-05
+* notice: last 14d: unq all: 5 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 777 1432 / 795 1465
+* notice: next accum: outdated-unq outdated-all / unq all: 777 1432 / 796 1466
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-22 2023-11-05]
+
 2023-11-05T00:47:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6758160545 # 2054
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-05
